--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -104,6 +104,41 @@
      SLACcitation  = "%%CITATION = HEP-PH/0210264;%%"
 }
 
+@Article{wu1970,
+     author    = "Cheng, Hung and Wu, T. T.",
+     title     = "{Limit of Cross-Sections at Infinite Energy}",
+     journal   = "Phys. Rev. Lett.",
+     volume    = "24",
+     year      = "1970",
+     pages     = "1456-1460",
+     doi       = "10.1103/PhysRevLett.24.1456",
+     SLACcitation  = "%%CITATION = PRLTA,24,1456;%%"
+}
+
+@Article{bsw1978,
+     author    = "Bourrely, C. and Soffer, Jacques and Wu, Tai Tsun",
+     title     = "{A New Impact Picture for Low and High-Energy Proton Proton
+                  Elastic Scattering}",
+     journal   = "Phys. Rev.",
+     volume    = "D19",
+     year      = "1979",
+     pages     = "3249",
+     doi       = "10.1103/PhysRevD.19.3249",
+     SLACcitation  = "%%CITATION = PHRVA,D19,3249;%%"
+}
+
+@Article{bsw1984,
+     author    = "Bourrely, C. and Soffer, Jacques and Wu, T. T.",
+     title     = "{Impact Picture Expectations for Very High-Energy Elastic
+                  $p p$ and $p \bar{p}$ Scattering}",
+     journal   = "Nucl. Phys.",
+     volume    = "B247",
+     year      = "1984",
+     pages     = "15",
+     doi       = "10.1016/0550-3213(84)90369-9",
+     SLACcitation  = "%%CITATION = NUPHA,B247,15;%%"
+}
+
 @Article{bh,
      author    = "Block, M. M. and Gregores, E. M. and Halzen, F. and
                   Pancheri, G.",
